# coyote-claw

./: .gitignore  CLAUDE.md  README.md  index.html  msvc-env.sh  package.json  pnpm-lock.yaml  tsconfig.json
.claude/skills/: dg-lab-bluetooth-v3.md  dg-lab-waveform-data.md  dg-lab-websocket-protocol.md
.claude/skills/dg-lab-bluetooth-v3/: SKILL.md
.claude/skills/dg-lab-waveform-data/: SKILL.md
.claude/skills/dg-lab-websocket-protocol/: SKILL.md
.claude/skills/svg-dark-mode/: SKILL.md
.github/workflows/: deploy.yml  release.yml
notes/: .gitignore  README.md  pyproject.toml  zensical.toml
notes/docs/: index.md  json.md  project.md  pulse.md
scripts/: gen_architecture_svg.py  gen_protocol_flow_svg.py  gen_waveform_format_svg.py
src/: App.tsx  index.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/ws/: connection.rs  message.rs  mod.rs  protocol.rs  server.rs
src/components/: ConnectionPanel.tsx  StrengthPanel.tsx  WaveformEditor.tsx  WaveformManager.tsx  WaveformPanel.tsx
src/hooks/: useWsServer.ts
