[package]
name = "coyote-claw"
version = "0.1.0"
edition = "2021"
description = "DG-LAB Coyote 3.0 third-party controller"
license = "GPL-3.0"

[lib]
name = "coyote_claw_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "coyote-claw"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "sync", "time"] }
tokio-tungstenite = "0.26"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
uuid = { version = "1", features = ["v4"] }
log = "0.4"
env_logger = "0.11"
